[package]
name = "demand"
version = "1.8.1"
edition = "2024"
description = "A CLI prompt library"
license = "MIT"
repository = "https://github.com/jdx/demand"
readme = "README.md"
keywords = ["cli", "prompt", "console"]
include = ["src/**/*", "examples/**/*", "README.md", "CHANGELOG.md", "LICENSE"]

[dependencies]
console = "0.16"
fuzzy-matcher = "0.3"
itertools = "0.14"
signal-hook = "0.4"
termcolor = "1"

[dev-dependencies]
ctor = "0.6"
indoc = "2"

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
sign-commit = true
pre-release-hook = [
  "git",
  "cliff",
  "-o",
  "CHANGELOG.md",
  "--tag",
  "{{version}}",
]
